# script-kiwi

./: .env.example  .gitignore  CATEGORIZATION_GUIDE.md  DEPENDENCY_METADATA_ISSUE.md  EXAMPLES.md  LICENSE  README.md  conftest.py  example.mcp.json  pyproject.toml  pytest.ini
docs/: ARCHITECTURE.md  ERROR_AND_DEPENDENCY_HANDLING.md  EVALUATION_PROMPT_CACHE_SOLUTION.md  HOW_TO_USE_KIWI_DIRECTIVES.md  LONG_RUNNING_SCRIPTS.md  MCP_CONFIGURATION.md  README.md  SCRIPT_LOGGING.md  proxy-setup.md  script-kiwi-schema.sql
docs/guides/: Directive-Orchestration-Pattern.md  Implementation-Alignment-Check.md  Implementation-Edge-Cases-and-Verification.md  Sample-Directive-Example.md  Script-Interface-Specification.md  Script-Kiwi-Migration-Plan.md  Script-Loading-Mechanism.md  Setup-Guide.md  The Kiwi Ecosystem Architecture.md  The Kiwi Ecosystem Implementation Guide.md
docs/implementation-plans/: 00-IMPLEMENTATION-OVERVIEW.md  01-legacy-script-maintenance.md  02-script-alternatives.md  03-niche-script-tracking.md  04-script-lifecycle.md  DIRECTIVE_REASONING_REQUIREMENTS.md  VIDEO_COMPARISON_KIWI_SYSTEMS.md
migrations/: 001_add_deprecated_columns.sql  002_fix_dependency_encoding.sql
script_kiwi/: server.py
script_kiwi/api/: execution_logger.py  script_registry.py
script_kiwi/tools/: __init__.py  help.py  load.py  publish.py  remove.py  run.py  search.py
script_kiwi/utils/: analytics.py  env_manager.py  script_metadata.py  script_resolver.py
tests/: __init__.py
tests/api/: __init__.py  test_execution_logger.py  test_script_registry.py
tests/execution/: __init__.py
(+21 files in other folders)
