[project]
name = "script-kiwi"
version = "0.1.0"
description = "Script execution MCP server with directive-based architecture"
authors = [{name = "Leo", email = "leo@example.com"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "supabase>=2.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "apify-client>=1.7.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "aiofiles>=23.0.0",
    "youtube-transcript-api>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
script-kiwi = "script_kiwi.server:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
